@@ -197,18 +197,15 @@ class AbstractProvider(object):
             result, query = context.get_ui().on_keyboard_input(context.localize(constants.localize.SEARCH_TITLE))
             incognito = str(context.get_param('incognito', False)).lower() == 'true'
             channel_id = context.get_param('channel_id', '')
-            addon_id = context.get_param('addon_id', '')
-            item_params = {'q': query}
-            if addon_id:
-                item_params.update({'addon_id': addon_id})
-            if incognito:
-                item_params.update({'incognito': incognito})
-            if channel_id:
-                item_params.update({'channel_id': channel_id})
             if result:
-                context.execute('Container.Update(%s)' % context.create_uri([constants.paths.SEARCH, 'query'], item_params))
-
-            return True
+                # context.execute('Container.Update(%s)' % context.create_uri([constants.paths.SEARCH, 'query'], item_params))
+                try:
+                    if not incognito and not channel_id:
+                        search_history.update(query)
+                    return self.on_search(query, context, re_match)
+                except:
+                    return list()
+            # return True
         elif command == 'query':
             incognito = str(context.get_param('incognito', False)).lower() == 'true'
             channel_id = context.get_param('channel_id', '')
@@ -218,8 +215,7 @@ class AbstractProvider(object):
                     search_history.update(query)
                 return self.on_search(query, context, re_match)
             except:
-                result = []
-                return result
+                return list()
         else:
             context.set_content_type(constants.content_type.FILES)
             result = []
